--- a/src/App.css
+++ b/src/App.css
@@ -202,9 +202,9 @@ a:hover {
   }
 
   section:first-of-type {
-    padding-top: 3rem;
+    padding-top: 4.5rem;
     padding-bottom: 2rem;
-    min-height: auto;
+    height: 100vh;
   }
 }
 
@@ -218,8 +218,8 @@ a:hover {
   }
 
   section:first-of-type {
-    padding-top: 2.5rem;
+    padding-top: 4rem;
     padding-bottom: 1.5rem;
-    min-height: auto;
+    height: 100vh;
   }
 }
