--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -81,6 +81,8 @@
     padding-top: 0;
     min-height: 0;
     flex: 1;
+    align-items: flex-start;
+    justify-content: flex-start;
     padding-bottom: 4rem;
   }
 
@@ -115,6 +117,8 @@
   .hero {
     min-height: 0;
     flex: 1;
+    align-items: flex-start;
+    justify-content: flex-start;
     padding-bottom: 6rem;
   }
 
