--- a/src/App.css
+++ b/src/App.css
@@ -205,7 +205,7 @@ a:hover {
     padding-top: 3.5rem;
     padding-bottom: 2rem;
     height: 100vh;
-    justify-content: flex-start;
+    justify-content: center;
   }
 }
 
@@ -219,9 +219,9 @@ a:hover {
   }
 
   section:first-of-type {
-    padding-top: 4rem;
+    padding-top: 2.5rem;
     padding-bottom: 1.5rem;
     height: 100vh;
-    justify-content: flex-start;
+    justify-content: center;
   }
 }
