--- a/src/App.css
+++ b/src/App.css
@@ -233,9 +233,9 @@ a:hover {
   }
 
   section:first-of-type {
-    padding-top: 3rem;
+    padding-top: 0;
     padding-bottom: 1.5rem;
-    height: 100vh;
+    min-height: calc(100vh - 60px);
     justify-content: center;
   }
 }
@@ -250,9 +250,9 @@ a:hover {
   }
 
   section:first-of-type {
-    padding-top: 2rem;
+    padding-top: 0;
     padding-bottom: 1rem;
-    height: 100vh;
+    min-height: calc(100vh - 60px);
     justify-content: center;
   }
 }
